--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,6 +5,12 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <h1>Hello World!</h1>
+        <h1>Welcome to Contact_Registry_App</h1>
+        <p>The endpoints are:</p>
+        <ul>
+            <li>/contacts</li>
+            <li>/contact_create.jsp</li>
+        </ul>
+        <p>The rest crud applications  ie: edit and delete ,can be accessed by clicking the buttons</p>
     </body>
 </html>
