Made changes to the servlets to allow jsp and json convertion to be accessed from both the frontend and backened

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,6 +11,6 @@
             <li>/contacts</li>
             <li>/contact_create.jsp</li>
         </ul>
-        <p>The rest crud applications  ie: edit and delete ,can be accessed by clicking the buttons</p>
+        <p>The rest crud applications  ie: edit and delete ,can be accessed by clicking the buttons.</p>
     </body>
 </html>
